[package]
name = "junctrap"
version = "0.1.0"
edition = "2024"

[dependencies]
widestring = "1.2.0"
windows = { version = "0.60.0", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
debug = []
